# reverseshell

./: Cargo.toml  README.md
src/: client.rs  create_word_list.py  ipaddr.rs  server.rs
