[package]
name = "reverseshell"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
fork = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.19"
rand = "0.8.5"